# project_folder

./: README.md  main.py  pyproject.toml
src/api/: abstract_api.py  hh_api.py
src/models/: vacancy.py
src/storage/: json_server.py
tests/: test_vacancy.py
